Tweak facet checkbox styling to fix label alignment
See https://github.com/hbz/nwbib/issues/375

--- a/public/stylesheets/resources.css
+++ b/public/stylesheets/resources.css
@@ -246,13 +246,9 @@ li .dropdown-header{
 }
 
 .facet-checkbox {
-    float: left;
-    line-height: 1em;
-    height: 1em;
-    margin: 0px 2px;
-    padding: 0px;
-    font-size: inherit;
-    clear: left;
+	vertical-align: bottom;
+	position: relative;
+	top: -1px;
 }
 
 .marker-cluster span {
